# sessions

./: README.md  pyproject.toml
data/demo/csv/events/date=2025-09-20/: sample20250920.csv
data/demo/csv/events/date=2025-09-21/: sample20250921.csv
data/demo/parquet/events/date=2025-09-20/: sample20250920.parquet
data/demo/parquet/events/date=2025-09-21/: sample20250921.parquet
notebooks/: demo.ipynb
src/event_sessions/sessions/: events_to_sessions.py
src/event_sessions/utils/: parameters.py  spark.py
